--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/webapp-pack ###
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+# MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
@@ -31,7 +31,7 @@ APP_SECRET=a4c942bfd4158aa207412d18fec5cb03
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 DATABASE_URL="mysql://root:@127.0.0.1:3306/stef?serverVersion=mariadb-10.4.24"
-# DATABASE_URL="mysql://aplusfqaplus:Lenusi4ka@aplusfqaplus.mysql.db/aplusfqaplus?serverVersion=5.6"
+# DATABASE_URL="mysql://steffrastef:NorikSTEF80steffrastef.mysql.db/steffrastef?serverVersion=5.6"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
